# simple-negotiator-purple

./: Dockerfile  README.md  agent.toml  main.py  negotiator.py  pyproject.toml
